--- a/datamodels/2.x/itop-core-update/view/SelectUpdateFile.ready.js.twig
+++ b/datamodels/2.x/itop-core-update/view/SelectUpdateFile.ready.js.twig
@@ -15,10 +15,18 @@ $.ajax({
         var oRequirements = $("#header-requirements");
         var oCanCoreUpdate = $("#can-core-update");
         oCanCoreUpdate.html(data.sMessage);
+        if(data.sMessageDetails){
+            $("#header-requirements-details").show();
+            $('#can-core-update-details').html(data.sMessageDetails);
+        }
         oRequirements.removeClass("message_info");
         if (data.bStatus)
         {
             oRequirements.addClass("message_ok");
+            $("#check-update").prop("disabled", false);
+            $("#file").prop("disabled", false);
+            $("#file-container").show();
+            $("#check-in-progress").hide();
         }
         else
         {
