--- a/datamodels/2.x/itop-core-update/view/ConfirmUpdate.html.twig
+++ b/datamodels/2.x/itop-core-update/view/ConfirmUpdate.html.twig
@@ -64,7 +64,7 @@
         <fieldset>
             <div class="message message-error">
                 <div>
-                    <span>{{ sError }}</span>
+                    <span>{{ sError|raw }}</span>
                 </div>
             </div>
 
