N°4644 - Core update : confusing warning message when integrity of iTop std files is modified - List all  modified files

--- a/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
+++ b/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
@@ -11,8 +11,9 @@
             <div>
                 <span id="can-core-update">{{ 'iTopUpdate:UI:CanCoreUpdate:Loading'|dict_s }}  <i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i></span>
             </div>
-            <div id="header-requirements-details" style="display: none;">
-                <div id="can-core-update-details" style="background-color: white; padding: 8px; border-radius: 5px; margin-top: 8px;"></div>
+            <div id="header-requirements-details" class="Collapsible" style="display: none;">
+                <a class="CollapsibleLabel" id="toggle-requirements-details" style="cursor:pointer;">{{ 'UI:Details+'|dict_s }}</a>
+                <div id="can-core-update-details" class="CollapsibleContent" style="background-color: white; padding: 8px; border-radius: 5px; margin-top: 8px;display:none;"></div>
             </div>
         </div>
 
