N°5028 Update iTop and Combodo logos to new ones

--- a/css/backoffice/pages/_all.scss
+++ b/css/backoffice/pages/_all.scss
@@ -3,6 +3,7 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
+@import "about";
 @import "base";
 @import "preferences";
 @import "attachments";
