--- a/css/unauthenticated.css
+++ b/css/unauthenticated.css
@@ -14,34 +14,4 @@
  * GNU Affero General Public License for more details.
  *
  * You should have received a copy of the GNU Affero General Public License
- */
-body {
-  display: block;
-}
-/* Landing page */
-#uwp-main-container {
-  margin-top: 40px;
-}
-#uwp-main-container #uwp-logo, #uwp-main-container #uwp-title {
-  vertical-align: middle;
-}
-#uwp-main-container #uwp-title {
-  margin-left: 25px;
-  font-size: 20px;
-  font-weight: bold;
-}
-#uwp-main-container #uwp-description {
-  margin-bottom: 25px;
-}
-#uwp-main-container .uwp-text-hint--icon {
-  font-size: 12px;
-  margin-left: 5px;
-  color: #939191;
-}
-#uwp-main-container #uwp-bottom-buttons {
-  margin-top: 25px;
-  text-align: right;
-}
-#uwp-main-container #uwp-bottom-buttons .btn ~ .btn {
-  margin-left: 8px;
-}
+ */body{display:block}#uwp-main-container{margin-top:40px}#uwp-main-container #uwp-logo,#uwp-main-container #uwp-title{vertical-align:middle;max-height:74px}#uwp-main-container #uwp-title{margin-left:25px;font-size:20px;font-weight:bold}#uwp-main-container #uwp-description{margin-bottom:25px}#uwp-main-container .uwp-text-hint--icon{font-size:12px;margin-left:5px;color:#939191}#uwp-main-container #uwp-bottom-buttons{margin-top:25px;text-align:right}#uwp-main-container #uwp-bottom-buttons .btn~.btn{margin-left:8px}
