N°2504 N°3169 N°5102 Add js template

--- a/templates/pages/backoffice/oauth/Wizard.html.twig
+++ b/templates/pages/backoffice/oauth/Wizard.html.twig
@@ -40,6 +40,7 @@
                         </div>
                     </div>
                 {% endfor %}
+                <button class="ibo-oauth-wizard--form--submit" type="submit">{{ 'UI:OAuth:Wizard:Form:Button:Submit:Label'|dict_s }}</button>
             </form>
         </fieldset>
     </div>
