--- a/templates/pages/backoffice/oauth/DisplayConfig.html.twig
+++ b/templates/pages/backoffice/oauth/DisplayConfig.html.twig
@@ -3,6 +3,6 @@
 
 <fieldset class="'ibo-oauth-wizard--conf--panel ibo-oauth-wizard--result--panel'">
     <legend>{{ 'UI:OAuth:Wizard:ResultConf:Panel:Title'|dict_s }}</legend>
-    <p>{{ 'UI:OAuthEmailSynchro:Wizard:ResultConf:Panel:Description'|dict_s }}</p>
+    <p>{{ 'UI:OAuth:Wizard:ResultConf:Panel:Description'|dict_s }}</p>
     <pre><code id="ibo-oauth-wizard--conf--result"></code></pre>
 </fieldset>
