N°2504 N°3169 N°5102 Handle result display

--- a/templates/pages/backoffice/oauth/Wizard.html.twig
+++ b/templates/pages/backoffice/oauth/Wizard.html.twig
@@ -33,7 +33,7 @@
                                         type="{{ aInput.type }}"
                                         id="wizard_input_{{ sName }}"
                                         name="{{ sName }}"
-                                        {% if aInput.real_only %} readonly {% endif %}
+                                        {% if aInput.read_only %} readonly {% endif %}
                                         value="{{ aInput.value }}"
                                 >
                             </div>
