--- a/templates/pages/backoffice/oauth/DisplayConfig.html.twig
+++ b/templates/pages/backoffice/oauth/DisplayConfig.html.twig
@@ -1,7 +1,7 @@
 {# @copyright   Copyright (C) 2010-2022 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 
-<fieldset class="'ibo-oauth-wizard--conf--panel ibo-oauth-wizard--result--panel'">
+<fieldset class="ibo-oauth-wizard--conf--panel ibo-oauth-wizard--result--panel">
     <legend>{{ 'UI:OAuth:Wizard:ResultConf:Panel:Title'|dict_s }}</legend>
     <p>{{ 'UI:OAuth:Wizard:ResultConf:Panel:Description'|dict_s }}</p>
     <pre><code id="ibo-oauth-wizard--conf--result"></code></pre>
