N°3169 - Add feature to connect Gsuite mail box with OAuth N°2504 - Add feature to connect Office mail box with OAuth2 for Microsoft Graph N°5102 - Allow to send emails (eg. notifications) using GSuite SMTP and OAuth  * 2.7 migration

--- a/templates/pages/backoffice/oauth/Wizard.html.twig
+++ b/templates/pages/backoffice/oauth/Wizard.html.twig
@@ -35,6 +35,7 @@
                                         name="{{ sName }}"
                                         {% if aInput.read_only %} readonly {% endif %}
                                         value="{{ aInput.value }}"
+                                        size="100"
                                 >
                             </div>
                         </div>
