--- a/templates/pages/backoffice/oauth/Wizard.html.twig
+++ b/templates/pages/backoffice/oauth/Wizard.html.twig
@@ -1,13 +1,11 @@
 {# @copyright   Copyright (C) 2010-2022 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 
-<div class="ibo-oauth-wizard">
-    <h1>{{ 'UI:OAuth:Wizard:Page:Title'|dict_s }}</h1>
+{% UIContentBlock Standard {AddCSSClasses:["ibo-oauth-wizard"]} %}
 
-    <div class="ibo-oauth-wizard">
-
-        <div class="ibo-oauth-wizard--form--container">
-            <div id="select_layout">
+    {% UIPanel Neutral {sTitle:'UI:OAuth:Wizard:Form:Panel:Title'|dict_s, AddCSSClasses:['ibo-oauth-wizard']} %}
+        {% UIContentBlock Standard {AddCSSClasses:["ibo-oauth-wizard--form--container"]} %}
+            {% UIContentBlock Standard {sId:'select_layout'} %}
                 {% set sIsChecked = 'checked' %}
                 {% for aSelect in aProviders %}
                     <input type="radio" name="provider" {{ sIsChecked }} value="{{ aSelect.name }}" id="layout_{{ aSelect.name }}" data-color1="{{ aSelect.colors.0 }}" data-color2="{{ aSelect.colors.1 }}" data-color3="{{ aSelect.colors.2 }}" data-color4="{{ aSelect.colors.3 }}">
@@ -17,37 +15,25 @@
 
                     {% set sIsChecked = '' %}
                 {% endfor %}
-            </div>
-        </div>
+            {% EndUIContentBlock %}
+        {% EndUIContentBlock %}
 
-        <fieldset>
-            <legend>{{ 'UI:OAuth:Wizard:Form:Panel:Title'|dict_s }}</legend>
-            <form class="ibo-oauth-wizard--form">
-                <input type="hidden" name="url" value="">
-                {% for sName, aInput in aInputs %}
-                    <div class="details">
-                        <div class="field_container field_small">
-                            <div class="field_label label"><label for="wizard_input_{{ sName }}">{{ aInput.label }}</label></div>
-                            <div class="field_data">
-                                <input
-                                        type="{{ aInput.type }}"
-                                        id="wizard_input_{{ sName }}"
-                                        name="{{ sName }}"
-                                        {% if aInput.read_only %} readonly {% endif %}
-                                        value="{{ aInput.value }}"
-                                        size="100"
-                                >
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-                <button class="ibo-oauth-wizard--form--submit" type="submit">{{ 'UI:OAuth:Wizard:Form:Button:Submit:Label'|dict_s }}</button>
-            </form>
-        </fieldset>
-    </div>
+        {% set aCSSClasses = ['ibo-oauth-wizard--form'] %}
+        {% for aSelect in aProviders %}
+            {% set aCSSClasses = aCSSClasses|merge(['ibo-oauth-wizard--form-' ~ aSelect.name]) %}
+        {% endfor %}
+        {% UIForm Standard {AddCSSClasses:aCSSClasses} %}
+            {% UIInput ForHidden {sName:'url', sValue:''} %}
+            {% for sName, aInput in aInputs %}
+                {% UIInput ForInputWithLabel {sLabel:aInput.label, sInputName:sName, sInputValue:aInput.value, sInputId:"wizard_input_"~sName, sInputType:aInput.type} %}
+            {% endfor %}
+            {% UIButton ForPrimaryAction {sLabel:'UI:OAuth:Wizard:Form:Button:Submit:Label'|dict_s, sName:'value', sValue:'value', bIsSubmit:true, sId:'value', AddCSSClasses:["ibo-oauth-wizard--form--submit"]} %}
+        {% EndUIForm %}
+    {% EndUIPanel %}
+
 
     {% for sTemplate in aAdditionalBlocks %}
         {% include sTemplate %}
     {% endfor %}
 
-</div>
+{% EndUIContentBlock %}
