N°5108 - Update embedded libs for PHP 8.0 (3.0 branch)

--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -94,14 +94,13 @@ $ibo-field--enable-bulk--checkbox--margin-left: $ibo-spacing-300 !default;
     max-width: 145px;
     width: 30%;
   }
-
   .ibo-field--value {
     margin-top: $ibo-field--value--margin-top--for-large; /* Mostly used to have a clear separation from elements in .ibo-field--comments */
   }
 
   /* N°4318 - Visible scrollbar background for large fields overflowing to ease "limits" visualization by the user */
   .ibo-field--value > * {
-    --ibo-scrollbar--scrollbar-track-background-color: $ibo-field--value--scrollbar-track-background-color;
+    --ibo-scrollbar--scrollbar-track-background-color: #{$ibo-field--value--scrollbar-track-background-color};
   }
 
   /* Fullscreen mode */
