--- a/templates/application/links/indirect/block-indirect-links-edit/layout.js.twig
+++ b/templates/application/links/indirect/block-indirect-links-edit/layout.js.twig
@@ -2,16 +2,17 @@
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
 oWidget{{ oUIBlock.iInputId }} = new LinksWidget(
-    '{{ oUIBlock.sLinkedSetId }}',
-    '{{ oUIBlock.sClass }}',
-    '{{ oUIBlock.sAttCode }}',
-    '{{ oUIBlock.iInputId }}',
-    '{{ oUIBlock.sNameSuffix }}',
-     {{ oUIBlock.bDuplicates }},
-     {{ oUIBlock.oWizHelper }},
-    '{{ oUIBlock.sExtKeyToRemote }}',
-     {{ oUIBlock.bJSDoSearch }},
-     {{ oUIBlock.iMaxAddedId }}
+        '{{ oUIBlock.sLinkedSetId }}',
+        '{{ oUIBlock.sClass }}',
+        '{{ oUIBlock.sAttCode }}',
+        '{{ oUIBlock.iInputId }}',
+        '{{ oUIBlock.sNameSuffix }}',
+        {{ oUIBlock.bDuplicates }},
+        {{ oUIBlock.oWizHelper }},
+        '{{ oUIBlock.sExtKeyToRemote }}',
+        {{ oUIBlock.bJSDoSearch }},
+        {{ oUIBlock.iMaxAddedId }},
+        {{ oUIBlock.aRemoved | raw }}
 );
 oWidget{{ oUIBlock.iInputId }}.Init();
 {% endapply %}
