--- a/css/light-grey.scss
+++ b/css/light-grey.scss
@@ -16,6 +16,12 @@
  * You should have received a copy of the GNU Affero General Public License
  */
 
+/*********************************************************************************/
+/*                                                                               */
+/* Deprecated since 3.0.0 as the backoffice now uses files from css/backoffice/* */
+/*                                                                               */
+/*********************************************************************************/
+
 @import 'css-variables.scss';
 
 #ibo-main-content,
