--- a/css/light-grey.scss
+++ b/css/light-grey.scss
@@ -16,11 +16,11 @@
  * You should have received a copy of the GNU Affero General Public License
  */
 
-/*********************************************************************************/
-/*                                                                               */
-/* Deprecated since 3.0.0 as the backoffice now uses files from css/backoffice/* */
-/*                                                                               */
-/*********************************************************************************/
+/********************************************************************************/
+/*                                                                              */
+/* @deprecated 3.0.0 N°5311 The backoffice now uses files from css/backoffice/* */
+/*                                                                              */
+/********************************************************************************/
 
 @import 'css-variables.scss';
 
