--- a/templates/pages/login/logout.html.twig
+++ b/templates/pages/login/logout.html.twig
@@ -11,3 +11,10 @@
 		</div>
 	</div>
 {% endblock %}
+
+{% block ready_script %}
+    {{ parent() }}
+
+    // Redirect after 2s so the user has time to read the message
+    setTimeout(function() { window.location.href = '{{ sUrl }}'; }, 1000);
+{% endblock %}
