Symfony 5.4 migration - missing macro import in login template

--- a/templates/pages/login/login.html.twig
+++ b/templates/pages/login/login.html.twig
@@ -70,6 +70,7 @@
 
 {% block login_footer %}
 	<div id="login-footer">
+        {% import "macros.twig" as Macro %}
 		{{ Macro.BlockExtension(aPluginFormData, 'login_footer') }}
 	</div>
 {% endblock login_footer %}
