N°4739 - Add semantic on state for user classes
  * Add new section in the backoffice SCSS structure for PHP classes of the DM that are in the core (not a module) and can't be styled via XML.

--- a/css/backoffice/main.scss
+++ b/css/backoffice/main.scss
@@ -9,6 +9,7 @@
 @import "components/all";
 @import "layout/all";
 @import "application/all";
+@import "datamodel/all";
 @import "pages/all";
 @import "blocks-integrations/all";
 @import "themes/all";
