--- a/templates/pages/login/logout.html.twig
+++ b/templates/pages/login/logout.html.twig
@@ -12,6 +12,10 @@
 	</div>
 {% endblock %}
 
+{% block script %}
+	sessionStorage.clear();
+{% endblock %}
+
 {% block ready_script %}
     {{ parent() }}
 
