--- a/templates/pages/login/logout.html.twig
+++ b/templates/pages/login/logout.html.twig
@@ -12,6 +12,12 @@
 	</div>
 {% endblock %}
 
+{% block script %}
+    {{ parent() }}
+    
+	sessionStorage.clear();
+{% endblock %}
+
 {% block ready_script %}
     {{ parent() }}
 
