--- a/templates/base/components/template/layout.html.twig
+++ b/templates/base/components/template/layout.html.twig
@@ -1,7 +1,7 @@
 {# @copyright   Copyright (C) 2010-2022 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
-    <template id="{{ oUIBlock.GetId() }}">
+    <template id="{{ oUIBlock.GetId() }}" data-role="ibo-template">
         {% for oMainBlock in oUIBlock.GetMainBlocks() %}
             {{ render_block(oMainBlock, {aPage: aPage}) }}
         {% endfor %}
