datatable row actions (code review S)

--- a/css/backoffice/components/_datatable.scss
+++ b/css/backoffice/components/_datatable.scss
@@ -120,7 +120,7 @@ $ibo-fieldsorter--selected--background-color: $ibo-color-blue-200 !default;
       background-color: $ibo-datatable--row--background-color--is-selected;
     }
 
-    .ibo-row-actions-toolbar{
+    .ibo-datatable--row-actions-toolbar{
       justify-content: end;
     }
   }
