--- a/templates/base/components/datatable/layout.html.twig
+++ b/templates/base/components/datatable/layout.html.twig
@@ -21,7 +21,7 @@
         <th class="ibo-datatable-header" {% if aColumn["description"] is not empty %}title="{{ aColumn["description"] }}"{% endif %}>{{ aColumn["attribute_label"] }} </th>
     {% endfor %}
     {% if oUIBlock.HasRowActions() %}
-        <th class="ibo-datatable-header"></th>
+        <th class="ibo-datatable-header">{{ 'UI:Datatables:Column:RowActions:Label'|dict_s }} </th>
     {% endif %}
     </thead>
 </table>
